--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
 #    currency_converter.example:
-#        class: Xigen\CurrencyConverterBundle\Example
+#        class: Xigen\Bundle\CurrencyConverterBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
